Significant retooling of the "jQuery UI Multicolumn Autocomplete Widget Plugin 2.2", to render using css table, table-row, and table-cell decorators, rather than the "span" tag with enforced minimum widths.  Also introducing an optional maxWidth argument.  Now columns size properly.  Moving away from float:left fixes the bug preventing jQuery-UI from rendering autocompletes properly.  Tested on Safari, Chrome, and Firefox.

--- a/main/static/main/common.css
+++ b/main/static/main/common.css
@@ -984,6 +984,24 @@ div.multientrybutton {
 
 
 /* Autocomplete input element styling */
+
+ul.edd-autocomplete-list {
+    display:table;
+}
+ul.edd-autocomplete-list > li {
+    display:table-row;
+}
+ul.edd-autocomplete-list > li.not(.odd) {
+    background-color:#FCFCFC;
+}
+ul.edd-autocomplete-list > li > div {
+    display:table-cell;
+}
+ul.edd-autocomplete-list > li > div.ui-state-active {
+    border-width:0px;
+    border:none;
+}
+
 input.autocomplete, input.autocomp {
     background-repeat: no-repeat;
     background-position: center right;
@@ -998,6 +1016,10 @@ input.autocomplete.wait, input.autocomp.wait {
 .ui-autocomplete.ui-menu span.ac_column {
     float: left;
     padding: 0 4px;
+}
+
+ul.ui-autocomplete {
+    list-style: none;
 }
 
 .ice_strain {
